kubernetes/apps/home-automation/redis-insight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  labels:
    app: redisinsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:

      - name:  redisinsight
        image: redislabs/redisinsight:1.7.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: db
          mountPath: /db
          subPath: redisinsight
        ports:
        - containerPort: 8001
          protocol: TCP
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: unraid-pvc
