kubernetes/apps/home-automation/redis-insight/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: redisinsight
