kubernetes/apps/home-automation/redis-insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: redisinsight
spec:
  ingressClassName: internal
  rules:
  - host: redis.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisinsight
            port:
              number: 5540
